# F1DataAnalysis

./: .gitignore  api.py  bahrain.ipynb  british.ipynb  consistency.ipynb  predictor.ipynb  pyproject.toml  quali_plot_utils.py  qualifying_script.py  race_plot_utils.py  race_script.py  standings.ipynb  utils.py
